code/deployment/kubernetes-vue.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: vue-app
    namespace: dad-group-21
spec:
    replicas: 1
    selector:
        matchLabels:
            app: vue-app
    template:
        metadata:
            labels:
                app: vue-app
        spec:
            containers:
                - name: web
                  image: registry.172.22.21.107.sslip.io/dad-group-21/web:v1.0.0

---
apiVersion: v1
kind: Service
metadata:
    name: vue-app
    namespace: dad-group-21
spec:
    ports:
        - port: 80
    selector:
        app: vue-app
